--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,40 +1,41 @@
-body{
-  
+body, html{
   background: #FDFDFB;
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
   
 ul {
- font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Didact Gothic', sans-serif;
   font-size: 16px;
   text-align: center;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #F6DB7B;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #F6DB7B;
   box-shadow: 0px 1px 10px #5E5E5E;
 }
 
 li {
-    display: inline-block;
-    text-align:center;
+  display: inline-block;
+  text-align:center;
 }
 
 li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 10px 50px;
-    text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 10px 50px;
+  text-decoration: none;
 }
 
 li a:hover {
-    background-color: #F4D35E;
+  background-color: #F4D35E;
 }
     
 li a.active { 
-    background-color: #F4D35E;
-
+  background-color: #F4D35E;
 }
 
 li a, .dropbtn {
@@ -89,3 +90,11 @@ div {font-family: 'Didact Gothic', sans-serif;
 footer {font-family: 'Didact Gothic', sans-serif;;
     font-size: 12px;}
 
+.container {
+  width: 900px;
+  margin: auto;
+}
+
+nav {
+  padding: 8px;
+}
